--- a/src/pages/wangyi/css/songList.css
+++ b/src/pages/wangyi/css/songList.css
@@ -35,11 +35,11 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        -webkit-filter: blur(0.9375rem);
-        -moz-filter: blur(0.9375rem);
-        -o-filter: blur(0.9375rem);
-        -ms-filter: blur(0.9375rem);
-        filter: blur(0.9375rem);
+        -webkit-filter: blur(0.733rem);
+        -moz-filter: blur(0.733rem);
+        -o-filter: blur(0.733rem);
+        -ms-filter: blur(0.733rem);
+        filter: blur(0.733rem);
     }
 
     .top {
@@ -94,4 +94,5 @@
     .title p {
         font-size: 1.05rem;
         color: white;
+       line-height: 1.75rem;
     }
