--- a/src/pages/wangyi/css/songList.css
+++ b/src/pages/wangyi/css/songList.css
@@ -9,6 +9,7 @@
         font-size: 1.125rem;
         justify-content: center;
         width: 100%;
+        z-index: 10;
     }
 
     .nav span,
@@ -19,7 +20,7 @@
     }
 
     .nav img {
-        width: 6%;
+        width: 1.25rem;
         z-index: 5;
         vertical-align: center;
     }
@@ -33,6 +34,7 @@
         height: 18.75rem;
         width: 100%;
         background-repeat: no-repeat;
+         /* background-color: rgba(0,0,0,1); */
         background-position: center;
         background-size: cover;
         -webkit-filter: blur(0.733rem);
@@ -47,13 +49,16 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-around;
+        margin-top:3.75rem
     }
 
     .content-front {
         position: absolute;
         width: 100%;
-        height: 14.5625rem;
-        top: 2.7875rem;
+        height: 19.75rem;
+        background-color: rgba(0,0,0,.05);
+        top: 0rem;
+       
     }
 
     .titlePic {
