--- a/src/pages/wangyi/css/songList.css
+++ b/src/pages/wangyi/css/songList.css
@@ -9,7 +9,7 @@
         font-size: 1.125rem;
         justify-content: center;
         width: 100%;
-        z-index: 10;
+        z-index: .5;
     }
 
     .nav span,
