--- a/src/pages/wangyi/css/songList.css
+++ b/src/pages/wangyi/css/songList.css
@@ -22,7 +22,7 @@
  .nav img {
      width: 1.25rem;
      z-index: 5;
-     vertical-align: center;
+     vertical-align: middle;
  }
 
  .roll {
@@ -55,7 +55,7 @@
  .content-front {
      position: absolute;
      width: 100%;
-     height: 19.75rem;
+     height: 20.75rem;
      background-color: rgba(0, 0, 0, .55);
      top: 0rem;
 
